impleted empty cart functionality
